# synth_tpp

./: .gitignore  README.md  pyproject.toml
docs/: README.md
synth_tpp/: __init__.py  generator.py
synth_tpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
synth_tpp/models/: __init__.py  base.py  hawkes_exp.py  lognormal.py  self_correcting.py
synth_tpp/synth_tpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_intensities.py
